# social-backend

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
alembic/: env.py
alembic/versions/: 223163d5fe81_adding_extra_columns_for_asset_mint_tx.py  31713977832b_initial_tables.py  362880fc56c6_adding_fk_for_asset_tables.py  49d27e1a9427_adding_foreign_keys_for_social_.py  5f22f981bf85_adding_index.py  63f937d0b958_re_adding_quantity_column_with_.py  674676ee9836_adding_foreign_keys.py  82eb781e7e85_init.py  8a5e8dc384b4_adding_foreign_keys.py  a7fcb0d48681_drop_quantity_field.py  c811eb716ba3_set_social_connection_user_id_nullable_.py  d0e064a71ea6_initial_tables.py  d5ed26486b2e_init.py  ee8c4b5de42f_adding_foreign_keys.py
app/: main.py  models.py
app/common/: router.py  schemas.py
app/core/: config.py  db.py
app/core/aio/: client.py
app/user/: crud.py  router.py  schemas.py  utils.py
app/wallet/: crud.py  router.py  schema.py  utils.py
src/: hello.py
tests/: example_test.py
tests/core/: config_test.py
tests/core/aio/: client_test.py
tests/wallet/: utils_test.py
