[tool.poetry]
name = "pantasia-social-backend"
version = "0.1.0"
description = "Pantasia Social Backend"
authors = ["Jian Shen <jianshen.yap@shopback.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
alembic = "^1.8.1"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
